--- a/index.Rmd
+++ b/index.Rmd
@@ -2,6 +2,8 @@
 title: "Thomas Wilder"
 image: "tom.jpg"
 links:
+  - label: ORCiD
+    url: "https://orcid.org/0000-0002-1108-4655"
   - label: LinkedIn
     url: "https://linkedin.com/in/thomasmwilder/"
 #  - label: Twitter
