added orcid and MSc title

--- a/index.Rmd
+++ b/index.Rmd
@@ -37,7 +37,7 @@ Thesis - "Mesoscale eddy-wind interaction"
 
 **The University of Manchester** | Manchester, UK
 
-MSc | 2016-2017
+MSc | Applied Mathematics | 2016-2017
 
 Dissertation - "Boundary layer separation in a non-axisymmetric container"
 
