--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ links:
 #  - label: Twitter
 #    url: "https://twitter.com/"
   - label: GitHub
-    url: "https://github.com/tomwilder"
+    url: "https://github.com/thomaswilder"
   - label: Email
     url: "mailto:t.wilder@uea.ac.uk"
 output:
@@ -22,7 +22,7 @@ output:
 
 ## Bio
 
-I am a current PhD student at the University of East Anglia who is interested in how surface winds interact with small scale ocean processes. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.
+I am a current PhD student at the University of East Anglia who is working on ocean current-wind interactions at the mesoscale. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.
 
 
 ## Education
