--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,9 @@ output:
 
 ## Bio
 
-I am a current PhD student at the University of East Anglia who is working on ocean current-wind interactions at the mesoscale. When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.
+I am a final year PhD student at the University of East Anglia working on mesoscale eddy-wind interactions. I am particularly interested in how eddy dynamics change in response to an interaction between winds and ocean currents.
+
+When I am away from the office you can find me cycling over the hills of Norfolk, or running through a muddy field.
 
 
 ## Education
@@ -41,9 +43,16 @@ MSc | Applied Mathematics | 2016-2017
 
 Dissertation - "Boundary layer separation in a non-axisymmetric container"
 
+## Publications
+
+[In Review] Wilder, T., Zhai, X., Munday, D. and Joshi, M. "The Response of a Baroclinic Anticyclonic Eddy to Relative Wind Stress Forcing". **Journal of Physical Oceanography**.
 
 ## Experience
 
-**Research Cruise** | North Atlantic, 24N
+**Research Cruise**  
 
-Physics team member | 2020
+GO-SHIP | North Atlantic 24N | Physics team member | 2020
+
+**Computer Skills**
+
+MITgcm | MATLAB | Python | LaTeX 
